# plm4newsrs

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  eval.sh  pyproject.toml  requirements.txt  setup.py  train.sh  unlearn.sh
configs/: __init__.py  base_config.py  config_loader.py  config_registry.py
configs/experiments/naml/: naml_bert_finetune_gossipcop.yaml  naml_bert_frozen.yaml  naml_bert_frozen_gossipcop.yaml  naml_glove.yaml  naml_glove_gossipcop.yaml
configs/experiments/nrms/: nerms_bert_frozen.yaml  nrms_bert_finetune.yaml  nrms_bert_finetune_gossipcop.yaml  nrms_bert_frozen_gossipcop.yaml  nrms_glove.yaml  nrms_glove_gossipcop.yaml  nrms_roberta_finetune.yaml
configs/experiments/simple/: bert_finetune.yaml  bert_frozen.yaml  glove.yaml  roberta_finetune.yaml  roberta_frozen.yaml
configs/experiments/unlearning/: first_order.yaml  first_order_manual.yaml  first_order_ratio.yaml  gradient_ascent.yaml  gradient_ascent_manual.yaml  gradient_ascent_ratio.yaml
configs/models/: naml_config.py  nrms_config.py  simple_config.py
configs/unlearning/: __init__.py  base_unlearning.py
configs/unlearning/methods/: __init__.py  first_order_config.py  gradient_ascent_config.py
notebooks/: Benchmarks_Analysis.ipynb
scripts/: evaluate.py  run_unlearning_experiments.py  train.py  unlearn.py
src/data/: __init__.py  collate.py  dataset.py  preprocessing.py
src/embeddings/: __init__.py  glove_utils.py
src/evaluation/: __init__.py  benchmark_dataset.py  evaluator.py  visualizer.py
src/evaluation/analyzers/: __init__.py  base_analyzer.py  exposure_analyzer.py  failure_analyzer.py  truth_decay_analyzer.py  unlearning_analyzer.py
src/evaluation/metrics/: __init__.py  misinformation.py  ranking.py  utility.py
src/models/: registry.py
src/models/components/: __init__.py  attention.py  encoders.py  layers.py
src/models/naml/: __init__.py  lightning_module.py  news_encoder.py  recommender.py  user_encoder.py
src/models/nrms/: __init__.py  lightning_module.py  news_encoder.py  recommender.py  user_encoder.py
src/models/simple/: __init__.py  lightning_module.py  news_encoder.py  recommender.py  user_encoder.py
src/training/: __init__.py  callbacks.py  trainer.py
src/unlearning/: __init__.py  base.py  evaluator.py  trainer.py  utils.py
src/unlearning/data/: __init__.py  forget_set.py  splitter.py
src/unlearning/methods/: __init__.py  first_order.py  gradient_ascent.py
src/unlearning/metrics/: __init__.py  efficiency.py  forget_quality.py  utility.py
src/utils/: paths.py  seed.py
